add new git aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,7 @@
 	editor = nano
 [credential]
 	helper = store
+[alias]
+        wip = for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads
+        his = log --date=format:'%d %b %Y' --diff-filter=A --name-only --pretty='%n%C(yellow bold)%ad%Creset'
+  
