--- a/.gitconfig
+++ b/.gitconfig
@@ -10,4 +10,5 @@
 [alias]
         wip = for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads
         cake = log --date=format:'%d %b %Y' --diff-filter=A --name-only --pretty='%n%C(yellow bold)🎂️ %ad%Creset by (%C(blue bold)%h%Creset)'
+        his = log --follow --color=always --date=format:'%d %b %Y' --pretty=format:'(%Cgreen%h%Creset)[%ad] %C(yellow bold)%s%Creset'
   
