--- a/.gitconfig
+++ b/.gitconfig
@@ -10,5 +10,7 @@
 [alias]
         wip = for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads
         cake = log --date=format:'%d %b %Y' --diff-filter=A --name-only --pretty='%n%C(yellow bold)🎂️ %ad%Creset by (%C(blue bold)%h%Creset)'
-        his = log --follow --color=always --date=format:'%d %b %Y' --pretty=format:'(%Cgreen%h%Creset)[%ad] %C(yellow bold)%s%Creset'
-  
+        his = log --follow --color=always --date=format:'%d %b, %Y' --pretty=format:'(%Cgreen%h%Creset)[%ad] %C(blue bold)%s%Creset'
+        wot = log --date=format:'%d %b, %Y' --pretty='%n%C(yellow bold)📅️ %ad%Creset by (%C(green bold)%an%Creset) %C(cyan bold)%h%Creset' --graph -L
+[color]
+  diff = always
