--- a/.gitconfig
+++ b/.gitconfig
@@ -21,7 +21,7 @@
         # generate changelog from commit messages
         chglg = "!f() { git log --since=2weeks --pretty=format:\"- [%h]($(git config --get remote.origin.url)/commit/%H) _%s_ (%cr) by (%an)\" | grep -v Merge > CHANGELOG.md;}; f"
         # git stash list with relative time
-        sl = stash list --pretty=format:'%C(bold green)(%cr)%C(reset) %C(bold blue)%gd%C(reset) - %s%n'
+        sl = !git --no-pager stash list --pretty=format:'%C(bold blue)%gd%C(reset) %C(bold green) (%cr)%C(reset) - %s'
 
 [color]
         diff = auto
