--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,8 @@
         chglg = "!f() { git log --since=2weeks --pretty=format:\"- [%h]($(git config --get remote.origin.url)/commit/%H) _%s_ (%cr) by (%an)\" | grep -v Merge > CHANGELOG.md;}; f"
         # git stash list with relative time
         sl = !git --no-pager stash list --pretty=format:'%C(bold blue)%gd%C(reset) %C(bold green) (%cr)%C(reset) - %s'
+	# get changes for only current checked out branch
+        po = !git pull origin $(git branch | grep \\* | cut -d ' ' -f2)
         stach = !git-stash-checkout
 
 [color]
