scripts backup from $HOME

--- a/.vale.ini
+++ b/.vale.ini
@@ -3,8 +3,8 @@ StylesPath = styles
 MinAlertLevel = suggestion
 
 # External packages
-Packages = Google, Readability, alex, proselint
+Packages = Google, Readability, alex, proselint, IBM
 # Only Markdown and .txt files; change to whatever you're using.
 [*.{md,txt}]
 # List of styles to load.
-BasedOnStyles = Microsoft, Google, Readability, alex, proselint
+BasedOnStyles = alex, proselint
